# pttbbs

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  pttbbs.cmake  pttbbs_mbbsd.mk  temp.c
common/: CMakeLists.txt  Makefile
common/bbs/: CMakeLists.txt
common/diet/: CMakeLists.txt
common/migrate_pttdb/: migrate_file_to_pttdb.c  migrate_pttdb_to_file.c  parse_legacy_file_comment_create_milli_timestamp_reset_karma.c
common/osdep/: CMakeLists.txt
common/pttdb/: Makefile  page_info.c  pttdb_comment.c  pttdb_comment_reply.c  pttdb_content_block.c  pttdb_dict_bson_by_uu.c  pttdb_dict_idx_by_uu.c  pttdb_file.c  pttdb_file_info.c  pttdb_main.c  pttdb_util.c  pttdb_uuid.c
common/pttlib/: Makefile  pttlib_util.c  util_time.c
common/pttui/: Makefile  ptt_screen.c  pttui_buffer.c  pttui_const.c  pttui_id_comment_id_dict.c  pttui_lua_bbs.c  pttui_resource_dict.c  pttui_resource_info.c  pttui_thread.c  pttui_thread_lock.c  pttui_util.c  pttui_var.c  vedit3.c  vedit3_action.c  vedit3_buffer.c  vedit3_resource_dict.c  vedit3_resource_info.c  vedit3_util.c
common/sys/: CMakeLists.txt
dockerfiles/: Dockerfile.default
docs/: docker.md  mongodb.md  unittest.md
include/: bbs.h  cmpttdb.h  cmpttlib.h  cmpttui.h  common.h  common_utf8.h  migrate.h  migrate_internal.h  migrate_merge.h  proto.h  proto_extra.h  ptt_const.h  pttconst.h  pttdb.h  pttdb_const.h  pttdb_const_utf8.h  pttdb_internal.h  pttdb_util.h  pttdb_uuid.h  pttdb_uuid_internal.h  ptterr.h  pttutil.h  util_db.h  util_db_internal.h  util_timestamp.h
include/cmpttdb/: page_info.h  page_info_private.h  pttdb_comment.h  pttdb_const.h  pttdb_content_block.h  pttdb_content_block_private.h  pttdb_file.h  pttdb_file_info.h  pttdb_file_info_private.h  pttdb_file_private.h  pttdb_main.h  pttdb_main_private.h  pttdb_util.h  pttdb_uuid.h
include/cmpttlib/: ptt_link_list.h  pttlib_util.h  util_time.h  util_time_private.h
include/cmpttui/: ptt_screen.h  pttui_buffer.h  pttui_buffer_private.h  pttui_const.h  pttui_id_comment_id_dict.h  pttui_lua_bbs.h  pttui_resource_dict.h  pttui_resource_dict_private.h  pttui_resource_info.h  pttui_thread.h  pttui_thread_lock.h  pttui_thread_lock_private.h  pttui_thread_private.h  pttui_util.h  pttui_var.h  vedit3.h  vedit3_action.h  vedit3_action_private.h  vedit3_buffer.h  vedit3_buffer_private.h  vedit3_private.h  vedit3_resource_dict.h  vedit3_resource_dict_private.h  vedit3_resource_info.h  vedit3_state.h
include/pttconst/: pttbool.h
mbbsd/: CMakeLists.txt  Makefile  bbs.c  edit3.c  mbbsd.c  mbbsd_internal.c  mbbsdvars.mk  migrate_db_to_file.c  migrate_file_to_db.c  migrate_merge.c  migrate_vedit3.c  post3.c  pttdb.c  pttdb_comment.c  pttdb_comment_reply.c  pttdb_const.c  pttdb_const_utf8.c  pttdb_content.c  pttdb_content_block.c  pttdb_dict_bson_by_uu.c  pttdb_internal.h  pttdb_main.c  pttdb_misc.c  pttdb_util.c  pttdb_uuid.c  pttutil.c  util_db.c  util_timestamp.c
sample/: pttbbs.cmake.conf  pttbbs.conf
scripts/: docker_build.sh  run_docker.sh  test.sh  test_all.sh  test_list.sh  test_mem_leak_all.sh
test_mbbsd/: Makefile
tests/: CMakeLists.txt
tests/test_common/: Makefile
tests/test_common/test_pttdb/: test_page_info.cc  test_pttdb_comment.cc  test_pttdb_comment_reply.cc  test_pttdb_content_block.cc
tests/test_common/test_pttlib/: test_util_time.cc
tests/test_common/test_pttui/: Makefile  test_pttui_buffer.cc  test_pttui_resource_dict.cc  test_pttui_resource_info.cc  test_pttui_thread.cc  test_pttui_thread_lock.cc  test_vedit3_buffer.cc  test_vedit3_resource_dict.cc  test_vedit3_resource_info.cc
tests/test_common/test_sys/: Makefile  test_string.cc
tests/test_data/: CMakeLists.txt  original_post.1.txt  original_post.2.txt  original_post.3.txt  original_post.4.txt  original_post.5.txt  original_post.6.txt  original_post.7.txt  original_post.8.txt  original_post.9.txt
tests/test_mbbsd/: CMakeLists.txt  Makefile  test_bbs.cc  test_dummy.cc  test_migrate_db_to_file.cc  test_migrate_file_to_db.cc  test_migrate_merge.cc  test_pttdb.c  test_pttdb.cc  test_pttdb_comment.cc  test_pttdb_comment_reply.cc  test_pttdb_content_block.cc  test_pttdb_dict_bson_by_uu.cc  test_pttdb_main.cc  test_pttdb_misc.cc  test_pttdb_util.cc  test_pttdb_uuid.c  test_pttdb_uuid.cc  test_pttutil.cc  test_util_db.cc  test_util_timestamp.cc
util/: CMakeLists.txt  sep_main_comments.py
util/pyutil/: sep_main_comments.py
