cmake_minimum_required(VERSION 2.6.4)

project(pttbbs)

message(STATUS "CMAKE_SYSTEM: ${CMAKE_SYSTEM}")
message(STATUS "CMAKE_SYSTEM_NAME: ${CMAKE_SYSTEM_NAME}")
message(STATUS "CMAKE_SYSTEM_VERSION: ${CMAKE_SYSTEM_VERSION}")

# configure_file(pttbbs.cmake.conf pttbbs.conf)

# add_subdirectory(common)
# add_subdirectory(tests)
